--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,24 @@
     }
 }
 
+@keyframes bounce-horizont {
+    0% {
+        transform: translateX(2000px);
+    }
+
+    70% {
+        transform: translateX(-30px);
+    }
+
+    90% {
+        transform: translateX(10px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
 @keyframes opacity {
     0% {
         opacity: 0;
@@ -1057,13 +1075,14 @@ input[type="radio"].visually-hidden {
 /* outline: 2px solid red; */
 }
 
-.service {
+.service-point {
     position: relative;
 
+    display: none;
 /* outline: 2px solid green; */
 }
 
-.delivery::after {
+.service-point-delivery::after {
     content: "";
 
     position: absolute;
@@ -1079,7 +1098,7 @@ input[type="radio"].visually-hidden {
     background-repeat: no-repeat;
 }
 
-.warranty::after {
+.service-point-warranty::after {
     content: "";
 
     position: absolute;
@@ -1095,7 +1114,7 @@ input[type="radio"].visually-hidden {
     background-repeat: no-repeat;
 }
 
-.credit::after {
+.service-point-credit::after {
     content: "";
 
     position: absolute;
@@ -1111,7 +1130,7 @@ input[type="radio"].visually-hidden {
     background-repeat: no-repeat;
 }
 
-.service h3 {
+.service-point h3 {
     margin: 0;
     margin-bottom: 35px;
     padding: 0;
@@ -1123,7 +1142,7 @@ input[type="radio"].visually-hidden {
 /* outline: 2px solid rgb(179, 11, 230); */
 }
 
-.service p {
+.service-point p {
     width: 450px;
     margin: 0;
     padding: 0;
@@ -1137,28 +1156,9 @@ input[type="radio"].visually-hidden {
 /* outline: 2px solid yellow; */
 }
 
-/* sdadasdafasdfasdfsdfsdadasdafasdfasdfsdfsdadasdafasdfasdfsdfsdadasdafasdfasdfsdf */
-
-/* sdadasdafasdfasdfsdfsdadasdafasdfasdfsdfsdadasdafasdfasdfsdfsdadasdafasdfasdfsdf */
-
-/* sdadasdafasdfasdfsdfsdadasdafasdfasdfsdfsdadasdafasdfasdfsdfsdadasdafasdfasdfsdf */
-.warranty {
-    display: none;
-}
-
-.credit {
-    display: none;
-}
-
-.delivery {
+.description-active {
     display: block;
 }
-
-/* sdadasdafasdfasdfsdfsdadasdafasdfasdfsdfsdadasdafasdfasdfsdfsdadasdafasdfasdfsdf */
-
-/* sdadasdafasdfasdfsdfsdadasdafasdfasdfsdfsdadasdafasdfasdfsdfsdadasdafasdfasdfsdf */
-
-/* sdadasdafasdfasdfsdfsdadasdafasdfasdfsdfsdadasdafasdfasdfsdfsdadasdafasdfasdfsdf */
 
 .companies-logos-list {
     display: flex;
@@ -1901,7 +1901,21 @@ input[type="radio"].visually-hidden {
     margin-top: -280px;
 }
 
+.modal-map iframe {
+    position: relative;
+    z-index: 2;
+}
+
+.modal-map-close {
+    z-index: 3;
+}
+
 .modal-map-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+
     width: 960px;
     height: 559px;
     margin: 0;
@@ -1912,6 +1926,12 @@ input[type="radio"].visually-hidden {
     display: block;
 
     animation: bounce 0.6s;
+}
+
+.modal-show-map {
+    display: block;
+
+    animation: bounce-horizont 0.6s;
 }
 
 .overlay-show {
