--- a/styles/style.css
+++ b/styles/style.css
@@ -323,6 +323,7 @@ input[type="radio"].visually-hidden {
 
 .user-menu {
     display: flex;
+    flex-wrap: wrap;
     width: 260px;
     margin: 0;
     padding: 0;
@@ -610,6 +611,7 @@ input[type="radio"].visually-hidden {
 
 .site-navigation__catalog-box {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
 
     margin: 0;
@@ -662,6 +664,7 @@ input[type="radio"].visually-hidden {
 
 .popular-item-column {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     width: 1040px;
     margin: 0 auto;
@@ -865,7 +868,8 @@ input[type="radio"].visually-hidden {
     right: 100px;
 
     display: flex;
-    width: 80px;
+    flex-wrap: wrap;
+    max-width: 100px;
 
     margin: 0;
     padding: 0; 
@@ -1162,6 +1166,7 @@ input[type="radio"].visually-hidden {
 
 .companies-logos-list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin: 0;
     margin-bottom: 95px;
@@ -1293,6 +1298,7 @@ input[type="radio"].visually-hidden {
 
 .footer-top {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 /* outline: 2px solid red; */
@@ -1317,6 +1323,7 @@ input[type="radio"].visually-hidden {
 
 .footer-user-menu {
     display: flex;
+    flex-wrap: wrap;
     margin: 0;
     padding: 0;
 
@@ -1476,6 +1483,7 @@ input[type="radio"].visually-hidden {
 
 .footer-middle {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     padding-top: 30px;
     margin-bottom: 45px;
@@ -1500,6 +1508,7 @@ input[type="radio"].visually-hidden {
 
 .footer-site-menu {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;    
     width: 440px;
     margin: 0;
@@ -1545,6 +1554,7 @@ input[type="radio"].visually-hidden {
     position: relative;
 
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
 
 /* outline: 2px solid green; */
@@ -1725,6 +1735,7 @@ input[type="radio"].visually-hidden {
 
 .modal-write-us-box {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 35px;
 }
@@ -1962,6 +1973,7 @@ input[type="radio"].visually-hidden {
 
 .breadcrumbs {
     display: flex;
+    flex-wrap: wrap;
     margin: 0;
     margin-bottom: 50px;
     padding: 0;
@@ -2025,6 +2037,7 @@ input[type="radio"].visually-hidden {
     position: relative;
 
     display: flex;
+    flex-wrap: no-wrap;
     width: 1200px;
     margin: 0 auto;
     padding-left: 80px;
@@ -2057,6 +2070,7 @@ background-color: #efefef;
     position: relative;
 
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
 
     min-height: 70px;
@@ -2419,6 +2433,7 @@ background-color: #efefef;
     position: relative;
 
     display: flex;
+    flex-wrap: no-wrap;
     align-items: center;
     min-height: 70px;
     margin-bottom: 70px;
@@ -2461,6 +2476,7 @@ background-color: #efefef;
     z-index: 10;
 
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -2576,6 +2592,7 @@ background-color: #efefef;
     left: 0;
 
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     width: 360px;
@@ -2649,6 +2666,7 @@ background-color: #efefef;
 
 .monopod-item-box {
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     height: 48px;
     align-items: baseline;
@@ -2704,6 +2722,7 @@ background-color: #efefef;
 
 .pagination-list {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     width: 100%;
     min-height: 70px;
